@@ -90,9 +90,9 @@ void QMCFlags::read_flags(string InFileName)
   use_basis_function_interpolation                = 0;
   number_basis_function_interpolation_grid_points = 1000;
   basis_function_interpolation_first_point        = 1e-10;
-  psuedo_gridLevel               = 1;
-  psuedo_cutoff                  = 1e-4;
-  use_psuedopotential            = 0;
+  pseudo_gridLevel               = 1;
+  pseudo_cutoff                  = 1e-4;
+  use_pseudopotential            = 0;
   walkers_per_pass               = 1;
   mpireduce_interval             = 1000;
   mpipoll_interval               = 1;
@@ -472,15 +472,15 @@ void QMCFlags::read_flags(string InFileName)
         {
           input_file >> trial_function_type;
         }
-      else if(temp_string == "psuedo_gridLevel")
+      else if(temp_string == "pseudo_gridLevel")
         {
           input_file >> temp_string;
-	  psuedo_gridLevel = atoi(temp_string.c_str());
+	  pseudo_gridLevel = atoi(temp_string.c_str());
         }
-      else if(temp_string == "psuedo_cutoff")
+      else if(temp_string == "pseudo_cutoff")
         {
           input_file >> temp_string;
-	  psuedo_cutoff = atof(temp_string.c_str());
+	  pseudo_cutoff = atof(temp_string.c_str());
         }
       else if(temp_string == "calculate_bf_density")
         {
@@ -1159,8 +1159,8 @@ ostream& operator <<(ostream& strm, QMCFlags& flags)
   strm << "charge\n " << flags.charge << endl;
   strm << "energy\n " << flags.energy_trial << endl;
   strm << "trial_function_type\n " << flags.trial_function_type << endl;
-  strm << "psuedo_gridLevel\n " << flags.psuedo_gridLevel << endl;
-  strm << "psuedo_cutoff\n " << flags.psuedo_cutoff << endl;
+  strm << "pseudo_gridLevel\n " << flags.pseudo_gridLevel << endl;
+  strm << "pseudo_cutoff\n " << flags.pseudo_cutoff << endl;
   strm << "norbitals\n " << flags.Norbitals << endl;
   strm << "nbasisfunc\n " << flags.Nbasisfunc << endl;
   strm << "ndeterminants\n " << flags.Ndeterminants << endl;
@@ -1447,9 +1447,9 @@ bool QMCFlags::checkFlags()
       walkers_per_pass = number_of_walkers;
     }
 
-  if(psuedo_gridLevel > 31){
-    clog << "Error: our Lebedev-Laikov grids are only defined up to psuedo_gridLevel = 31.\n";
-    clog << "You requested psuedo_gridLevel = " << psuedo_gridLevel << endl;
+  if(pseudo_gridLevel > 31){
+    clog << "Error: our Lebedev-Laikov grids are only defined up to pseudo_gridLevel = 31.\n";
+    clog << "You requested pseudo_gridLevel = " << pseudo_gridLevel << endl;
     return false;
   } else {
 
